tests/NormalTests/paczka2/big_fuzzy/30981948.err
Error in line 1: BNLagfVIJ A577 10,5
Error in line 6: BNLagfVIJ A577 9,74
Error in line 34: A991 S181 24,3
Error in line 32: BNLagfVIJ S155 6,3
Error in line 43: BNLagfVIJ A577 25,0
Error in line 54: A991 S1%1 91,5
Error in line 56: qRnqUSFXwC4 A991 79,6
Error in line 51: 1WJuL5T S181 3,6
Error in line 72: WXN1 S181 10,2
Error in line 73: A991 S181 35,6
Error in line 78: A991 A577 2,1
Error in line 87: BNLagfVIJ S181 20,2
Error in line 79: EJMRyC7X8uB S155 57,2
Error in line 84: A991 S181 0,5
Error in line 85: 1WJuL5T A577 75,9
Error in line 90: EJMRyC7X8uB S181 56,6
Error in line 106: A991 S155 5V,3
Error in line 107: A991 S155 -2,9
Error in line 108: WXN1 S181 21,0
Error in line 100: 1WJuL5T S181 57,6
Error in line 117: UPL A577 32,9
Error in line 125: qRnqUSFXwC4 S1?? 63,0
Error in line 127: UPL A991 14,3
Error in line 128: qRnqUSFXwC4 S155 88,2
Error in line 144: BNLagfVIJ S155 98,3
Error in line 167: EJMRyC7X8uB A991 59,78
Error in line 162: 1WJuL5T A991 31,9
Error in line 172: WXN1 S181 445
Error in line 161: EJMRyC7X8uB A991 85,4
Error in line 171: WXN1 S155 65,6
Error in line 163: UPL A577 320,1
Error in line 186: qRnqUSFXwC4 A577 6,2
Error in line 188: qRnqUSFXwC4 S181 +7,8
Error in line 184: UPL A991 2,4
Error in line 185: 1WJuL5T A991 15,5
Error in line 187: qRnqUSFXwC4 S155 51,5
Error in line 195: UPL A577 -2,1
Error in line 189: UPL A577 95,8
Error in line 199: qRnqUSFXwC4 S1rr 7,7
Error in line 202: 1WJuL5T A577 26,6
Error in line 207: 1WJuL5T A991 34,8
Error in line 213: 1WJuL5T A577 11,97
Error in line 191: qRnqUSFXwC4 S181 239,6
Error in line 210: 1WJuL5T S155 85,2
Error in line 208: A991 S155 18,5
Error in line 222: WXN1 S181 6,2
Error in line 216: 1WJuL5T S181 26,2
Error in line 215: qRnqUSFXwC4 A577 99,4
Error in line 227: 1WJuL5T A991 58,1
Error in line 233: WXN1 A991 68,0
Error in line 234: WXN1 S181 37,1
Error in line 230: UPL A577 4,3
